Noissue - Fixed regression: Logo image broken in mobile options page Review: https://codereview.adblockplus.org/29545595/

--- a/skin/mobile-options.css
+++ b/skin/mobile-options.css
@@ -78,7 +78,7 @@ h1::before
   left: -25px;
   width: 20px;
   height: 20px;
-  background: url(mobile/abp-logo.svg) 0/20px;
+  background-image: url(abp-logo.svg);
   content: "";
 }
 
